examples/type_system/failing/151_array_literal_concrete_conflict_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let xs: Array<Int> = [|1, "two"|]
}
